objects/Benefit__c.object
<CustomObject><fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Count__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Count</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Salesforce_ID__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Salesforce ID</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Total_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Unit Value</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Unit_Cost__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Unit Cost</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>false</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>false</enableSharing><enableStreamingApi>false</enableStreamingApi><label>Benefit</label><nameField>
        <label>Benefit Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Benefits</pluralLabel><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Count__c</columns>
        <columns>Total_Value__c</columns>
        <columns>Unit_Cost__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>